--- a/Integrated_project_P3_Validating_our_data_student.ipynb
+++ b/Integrated_project_P3_Validating_our_data_student.ipynb
@@ -14,8 +14,7 @@
    "id": "f662d169",
    "metadata": {},
    "source": [
-    "# Integrated project: Validating our data\n",
-    ""
+    "# Integrated project: Validating our data\n"
    ]
   },
   {
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "33c121c7",
    "metadata": {},
    "outputs": [],
@@ -235,10 +234,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ab50c3c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: Pyarrow in .\\venv\\Lib\\site-packages (23.0.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install Pyarrow"
    ]
@@ -265,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fff3fd6a",
    "metadata": {},
    "outputs": [],
@@ -282,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e62b8530",
    "metadata": {},
    "outputs": [],
@@ -304,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c8e4173c",
    "metadata": {},
    "outputs": [],
@@ -329,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7df10cb5",
    "metadata": {},
    "outputs": [],
@@ -340,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "97717c56",
    "metadata": {},
    "outputs": [],
@@ -419,10 +427,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "13e22228",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Weather_station_ID</th>\n",
+       "      <th>Message</th>\n",
+       "      <th>Measurement</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Weather_station_ID, Message, Measurement, Value]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use this line of code to see which messages are not assigned yet.\n",
     "weather_station_df[(weather_station_df['Measurement'] == None)|(weather_station_df['Value'].isna())]"
@@ -430,10 +481,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9afa1e70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pollution_level</th>\n",
+       "      <th>Rainfall</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Weather_station</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.367706</td>\n",
+       "      <td>1522.894473</td>\n",
+       "      <td>13.393418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.244627</td>\n",
+       "      <td>568.445319</td>\n",
+       "      <td>13.058085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.043810</td>\n",
+       "      <td>1705.834280</td>\n",
+       "      <td>13.168364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.271464</td>\n",
+       "      <td>931.607860</td>\n",
+       "      <td>13.224666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.139913</td>\n",
+       "      <td>1168.991800</td>\n",
+       "      <td>13.197995</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Pollution_level     Rainfall  Temperature\n",
+       "Weather_station                                           \n",
+       "0                       0.367706  1522.894473    13.393418\n",
+       "1                       0.244627   568.445319    13.058085\n",
+       "2                       0.043810  1705.834280    13.168364\n",
+       "3                       0.271464   931.607860    13.224666\n",
+       "4                       0.139913  1168.991800    13.197995"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "MD_agric_df = MD_agric_df.merge(weather_station_mapping_df,on = 'Field_ID', how='left')\n",
@@ -977,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a0462cc1",
    "metadata": {},
    "outputs": [],
@@ -3301,7 +3434,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -3315,7 +3448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
